# OS-Kernel

./: CMakeLists.txt  Makefile  README.md  build.sh  grub.cfg  linker.ld
res/: images
src/arch/i386/: arch_gdt.c  arch_idt.c  arch_irq.c  arch_isrs.c  arch_keyboard.c  arch_multiboot.c  arch_string.c  arch_terminal.c  arch_timer.c  boot.s  isr.s
src/arch/i386/include/: arch.h  arch_idt.h  arch_irq.h  arch_isrs.h  arch_keyboard.h  arch_multiboot.h  arch_string.h
src/boot/: boot.s  boot.s.old
src/kernel/: kernel.cpp  kernel_main.cpp  memory.cpp  stdio.cpp  string.cpp  system.h  terminal.cpp  video.cpp  video.h
src/kernel/arch/i386/: arch_gdt.c  arch_idt.c  arch_io.c  arch_io.cpp  arch_irq.c  arch_isrs.c  arch_multiboot.c  arch_string.c  arch_terminal.c  archgdt.c  boot.s  gdt.c  io.cpp  io.s  iqr.s  irq.s  isr.s  mem_util.c  string.c  terminal.c  terminal.cpp
src/kernel/arch/i386/include/: arch.h  arch_gdt.h  arch_idt.h  arch_io.h  arch_isrs.h  arch_string.h  arch_terminal.h  arch_timer.h  arch_types.h  archgdt.h  gdt.h  io.h  mem_util.h  memory.h  string.h  terminal.h
src/kernel/drivers/: vga.cpp
src/kernel/gui/: desktop.cpp  widget.cpp  window.cpp
src/kernel/hardwarecommunication/: port.cpp
src/kernel/include/: memory.cpp  memory.h  string.h  system.h  terminal.h
src/kernel/include/common/: graphicscontext.h  types.h
src/kernel/include/drivers/: vga.h
src/kernel/include/gui/: desktop.h  widget.h  window.h
src/kernel/include/hardwarecommunication/: port.h
src/kernel/include/shell/: shell.h
src/kernel/libc/: cstdlib.h  itoa.c  memory.c  memory.cpp  stdio.c  string.cpp
src/kernel/libc++/include/: string.h  types.h
src/kernel/libc++/string/: string.cpp
src/kernel/libc/include/: arch.h  itoa.h  stdio.h
src/kernel/shell/: shell.cpp
src/libc/: atoi.c  cstdlib.h  itoa.c  memory.c  stdio.c  time.c
src/libc/include/: arch.h  atoi.h  cstdlib.h  itoa.h  memory.h  stdio.h  string.h  time.h  types.h
